clang/test/BSC/Negative/Ownership/Owned/owned_trait_return/owned_trait_return.cbs
// RUN: %clang_cc1 -verify %s

_Trait T {
  _Safe void do_it(This* _Owned this);
  void do_that(This* this);
  _Safe void do_this(This* _Borrow this);
};

_Safe void int::do_it(int* _Owned this) {
  _Unsafe { int* x = __move_to_raw(this); }
}

void int::do_that(int* this) {
}

_Safe void int::do_this(int* _Borrow this) {
}

_Impl _Trait T for int;

struct S {
  int* _Owned a;
  int* _Owned b;
};

_Safe void struct S::do_it(struct S* _Owned this) {
  _Unsafe {
    int* a = __move_to_raw(this->a);
    int* b = __move_to_raw(this->b);
    void* s = __move_to_raw(this); // expected-error {{use of all moved value: `this`}}
  }
}

void struct S::do_that(struct S* this) {
}

_Safe void struct S::do_this(struct S* _Borrow this) {
}

_Impl _Trait T for struct S;

_Safe int* _Owned initI(void);
_Safe struct S initS(void);
struct S* initSP();
_Safe struct S* _Owned convertToOwned(struct S);

_Trait T* cond1(int flag) {
  if (flag == 1) {
    int x = 1;
    return &x;
  } else if (flag == 2) {
    struct S* sp = initSP();
    return sp;
  } else if (flag == 3) {
    int x = 2;
    return __take_from_raw(&x); // expected-error {{expected a pointer type which has implemented '_Trait T', found 'int *_Owned _Nullable'}}
  } else {
    double y = 2.0;
    return &y; // expected-error {{expected a pointer type which has implemented '_Trait T', found 'double'}}
  }
}

_Trait T* _Owned cond2(int flag) {
  if (flag == 1) {
    int x = 1;
    return __take_from_raw(&x); // expected-error {{expected a pointer type which has implemented '_Trait T', found 'int *_Owned _Nullable'}}
  } else if (flag == 2) {
    struct S s = initS();
    struct S* _Owned sp = convertToOwned(s);
    return sp;
  } else if (flag == 3) {
    int x = 2;
    return &x; // expected-error {{incompatible _Owned types, cannot cast 'void *' to 'void *_Owned'}}
  }
}

_Trait T* _Borrow cond3(int flag, int* _Borrow x) {
  if (flag == 1) {
    return x;
  } else if (flag == 2) {
    struct S* sp = initSP();
    return &_Mut *sp;
  } else {
    struct S s = initS();
    return &_Mut s;
  }
}

